# afrun

./: .gitignore  README.md  pyproject.toml
src/afrun/: config.py  main.py
src/afrun/evaluator/: __init__.py  eval.py  rmsd.py
src/afrun/metrics/: __init__.py  metrics.py  molprobity.py  rmsd.py
src/afrun/models/: _base.py  af3.py
src/afrun/msa/: msadb.py
src/afrun/scripts/: run_alphafold.sh  run_alphafold_dev.sh  run_molprobity.sh
src/afrun/utils/: __init__.py  config_utils.py  gpu_utils.py  job_utils.py  results_utils.py  sturucture_utils.py  web_utils.py
